fix: fix cart item, mobile categories list and points on the map

--- a/src/views/pages/showcase/Cart/Items/Item/item.module.scss
+++ b/src/views/pages/showcase/Cart/Items/Item/item.module.scss
@@ -40,6 +40,12 @@
 
 .amount {
   display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.quantity {
+  display: flex;
   align-items: center;
 }
 
