--- a/src/views/common/Layout/Header/Categories/categories.module.scss
+++ b/src/views/common/Layout/Header/Categories/categories.module.scss
@@ -1,10 +1,16 @@
 .wrapper {
+  height: 32px;
   margin-top: 8px;
+}
+
+.item {
+  white-space: nowrap;
 }
 
 @media (min-width: 1024px) {
   .wrapper {
     width: 930px;
+    height: 24px;
     margin: 0 auto;
   }
 
