--- a/src/views/common/Layout/Header/header.module.scss
+++ b/src/views/common/Layout/Header/header.module.scss
@@ -41,6 +41,8 @@
 
 @media (min-width: 1024px) {
   .header {
+    position: sticky;
+    top: 0;
     z-index: 3;
     grid-auto-flow: column;
     grid-gap: 16px;
