--- a/src/views/pages/checkout/Result/result.module.scss
+++ b/src/views/pages/checkout/Result/result.module.scss
@@ -12,7 +12,16 @@
   width: 40px;
   height: 40px;
   margin-bottom: 16px;
+}
+
+.successIcon {
+  composes: icon;
   fill: $default;
+}
+
+.failureIcon {
+  composes: icon;
+  fill: $warning500;
 }
 
 .mainText {
@@ -27,6 +36,11 @@
   color: $default;
   font-size: 16px;
   line-height: 22px;
+}
+
+.errorMessage {
+  composes: number;
+  color: $warning500;
 }
 
 .info {
