--- a/src/views/pages/showcase/Cart/Items/Item/item.module.scss
+++ b/src/views/pages/showcase/Cart/Items/Item/item.module.scss
@@ -4,22 +4,19 @@
   display: grid;
   grid-gap: 10px;
   grid-template-areas: 'l r';
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 90px 1fr;
 }
 
 .imageWrapper {
-  position: relative;
   grid-area: l;
   width: 100%;
-  padding: 50% 0;
+  height: fit-content;
 }
 
 .image {
-  position: absolute;
-  top: 0;
   display: block;
   width: 100%;
-  height: 100%;
+  height: auto;
   object-fit: contain;
   border-radius: 4px;
 }
@@ -51,6 +48,7 @@
 
 .count {
   input {
+    width: 90px;
     text-align: center;
   }
 }
@@ -71,8 +69,61 @@
 }
 
 .deleteText {
+  display: none;
   color: $default;
   cursor: pointer;
+}
+
+.outOfStock {
+  display: none;
+  align-items: center;
+  width: fit-content;
+  height: 20px;
+  margin-bottom: 8px;
+  padding: 0 7px;
+  color: $default;
+  font-size: 12px;
+  line-height: 18px;
+  background: $selected;
+  border-radius: 10px;
+}
+
+.outOfStockMobile {
+  composes: outOfStock;
+}
+
+.outOfStockPC {
+  composes: outOfStock;
+}
+
+.itemOutOfStock {
+  .image {
+    opacity: 0.5;
+  }
+
+  .outOfStockMobile {
+    display: flex;
+  }
+
+  .price {
+    color: $disabled;
+  }
+
+  .name {
+    color: $disabled;
+  }
+
+  .count {
+    display: none;
+  }
+
+  .trash {
+    margin: 0;
+  }
+
+  .singleItemPrice {
+    display: none;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -87,6 +138,10 @@
     display: grid;
     grid-gap: 30px;
     grid-template-columns: 1fr 90px 90px;
+  }
+
+  .deleteText {
+    display: flex;
   }
 
   .prices {
@@ -113,5 +168,23 @@
 
   .count {
     display: block;
+  }
+
+  .itemOutOfStock {
+    .right {
+      grid-template-columns: 1fr 90px;
+    }
+
+    .outOfStockMobile {
+      display: none;
+    }
+
+    .amount {
+      display: none;
+    }
+
+    .outOfStockPC {
+      display: flex;
+    }
   }
 }
