--- a/src/views/pages/showcase/Cart/Items/Item/item.module.scss
+++ b/src/views/pages/showcase/Cart/Items/Item/item.module.scss
@@ -31,7 +31,7 @@
 }
 
 .name {
-  margin-bottom: 8px;
+  margin-bottom: 2px;
   color: $primary;
 }
 
@@ -39,6 +39,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  margin-top: 8px;
 }
 
 .quantity {
@@ -164,6 +165,7 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    margin: 0;
   }
 
   .count {
